# transformer-tts

./: README.md  pyproject.toml
configs/kss/: train.yaml
src/transformer_tts/models/: modules.py  transformers.py
src/transformer_tts/trainer/: optimizer.py  scheduler.py  trainer.py
src/transformer_tts/tts_dataset/: __init__.py  audio_utils.py  feature_extractor.py  kss.py  text.py
src/transformer_tts/utils/: config.py
